--- a/Builder/Builder.csproj
+++ b/Builder/Builder.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>BuilderPattern</RootNamespace>
   </PropertyGroup>
 
 </Project>
