--- a/FactoryMethod/FactoryMethod.csproj
+++ b/FactoryMethod/FactoryMethod.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>FactoryMethodPattern</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
 
 </Project>
