--- a/Decorator/Decorator.csproj
+++ b/Decorator/Decorator.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <RootNamespace>DecoratorPattern</RootNamespace>
   </PropertyGroup>
 
 </Project>
